--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
     <link rel="apple-touch-icon" href="logo192.png" />
 
-    <title>Apex Tracker React</title>
+    <title>Apex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
